--- a/detail.html
+++ b/detail.html
@@ -2211,10 +2211,14 @@
 											</div>
 										</div> 
 										<a class="carousel-control-prev" href="#demo" data-slide="prev">
-											<span class="carousel-control-prev-icon"></span>
+											<div class="frame-carousel"> 
+												<i class="far fa-chevron-left"></i>
+											</div>
 										</a>
 										<a class="carousel-control-next" href="#demo" data-slide="next">
-											<span class="carousel-control-next-icon"></span>
+											<div class="frame-carousel"> 
+												<i class="far fa-chevron-right"></i>
+											</div>
 										</a>
 									</div>
 								</div>
