--- a/detail.html
+++ b/detail.html
@@ -2186,7 +2186,7 @@
 							  
 							<div class="col p-0">
 								<div class="d-flx-combo w-100 carouselx active"> 
-									<div id="demo" class="carousel slide" data-ride="carousel"> 
+									<div id="demo" class="carousel slide carousel-fade" data-ride="carousel"> 
 										<p class="des-photo">45 Tudor City Place, Unit 901 | $599,000 | 1 Bed | 2 Baths </p>
 										<ol class="carousel-indicators">
 											<li data-target="#demo" data-slide-to="0" class="active" style="background: url(images/cd1.jpg)"></li>
