--- a/detail.html
+++ b/detail.html
@@ -2297,6 +2297,21 @@
 											<div class="col-4 p-1"> 
 												<div id="5" style="background: url(images/cd2.jpg);"></div>
 											</div> 
+											<div class="col-4 p-1"> 
+												<div id="6" style="background: url(images/cd2.jpg);"></div>
+											</div> 
+											<div class="col-4 p-1"> 
+												<div id="7" style="background: url(images/cd2.jpg);"></div>
+											</div> 
+											<div class="col-4 p-1"> 
+												<div id="8" style="background: url(images/cd2.jpg);"></div>
+											</div> 
+											<div class="col-4 p-1"> 
+												<div id="9" style="background: url(images/cd2.jpg);"></div>
+											</div> 
+											<div class="col-4 p-1"> 
+												<div id="10" style="background: url(images/cd2.jpg);"></div>
+											</div> 
 										</div>
 									</div>
 								</div>
