--- a/deposit.html
+++ b/deposit.html
@@ -17,6 +17,7 @@
 
 	<link rel="stylesheet" href="css/image-uploader.min.css">
 
+
 </head>
 <body>
 
@@ -179,7 +180,7 @@
 					<div class="col-xl-10">
 						<div class="dep-box">
 							<h1 class="mb-4">ฝากอสังหาริมทรัพย์</h1>
-							<form>
+							<form action="../../include/process_consignment.php" enctype="multipart/form-data" method="post" id="form1">
 								<div class="form-group mb-4">
 									<div class="col">
 										<div class="row">
@@ -378,7 +379,9 @@
 								<div class="col-lg-12 text-center">
 									<h6>กรุณายืนยัน "ฉันไม่ใช่โปรแกรมอัตโนมัติ"</h6>
 								
-									<button class="btn">Submit</button>
+									<button type="button" class="btn"  id="submit-form">Submit</button>
+ 
+
 								</div>
 
 
@@ -388,7 +391,8 @@
 				</div>
 			</div>
 		</section>
-  
+
+		
 
 		<section class="sec-home10">
 			<div class="container-fluid">  
@@ -557,6 +561,7 @@
  
 
 
+	
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script> 
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>   
@@ -567,15 +572,15 @@
  
 	<script>
 
-	 
-
-		
+			
+		$('#submit-form').click(function() { 
+			$( "#form1" )[0].submit();   
+		});
+				
 
 		$(function () {
 
-			$('.input-images-1').imageUploader();
-
-	 
+			$('.input-images-1').imageUploader();      
 
 			$('form').on('submit', function (event) {
 
